# hybrid-yolov9-detr-strawberry-disease

./: .gitignore  CONTRIBUTING.md  DETR training  Evaluation of DETR  Fine-Tuning Yolo  Fine-Tuning the optimized DETR  Hybrid model  README.md  Yolo training  evaluate_detr.py  finetune_detr_extra.py  finetune_yolo.py  hybrid_inference.py  optimize_detr.py  optimizing DETR  pyproject.toml  requirements.txt  train_detr.py  train_yolo.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
notebooks/: demo.ipynb  retrain_detr.ipynb
space/: README.md  SETUP.md  app.py  requirements.txt
src/: __init__.py  config.py  evaluate_detr.py  finetune_detr_extra.py  finetune_yolo.py  hybrid_inference.py  optimize_detr.py  predict.py  retrain_detr.py  train_detr.py  train_yolo.py  utils.py
